# ethernity

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGE_VARIANT_PLAN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  SECURITY.md  _typos.toml  ethernity.spec  install.ps1  package-lock.json  pyproject.toml  pyrightconfig.json  setup.py  sharding.py  sitecustomize.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: open-source-readiness.md
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  homebrew-tap.yml  pyinstaller.yml
demo/: render_demo.py  scan_demo.py
demo/recursive-test/alpha/: readme.txt
demo/recursive-test/misc/: file-01.txt  file-02.txt  file-03.txt
demo/recursive-test/nested/: nested.txt
docs/: cli_api.md  cli_api.schema.json  format.md  format_changes.md  format_notes.md  frontend_api_usage.md  homebrew.md  release_artifacts.md
docs/reviews/: cli_flow_ux_backlog.md  cli_flow_ux_review.md  cli_flow_ux_test_gaps.md
ethernity/: __init__.py  __main__.py  age_cli.py  chunking.py  compression.py  config.py  envelope.py  framing.py  manifest.py  pdf_render.py  qr_payloads.py  sharding.py  signing.py
ethernity/cli/: __init__.py  api.py  app.py  command_registry.py  startup.py
ethernity/cli/commands/: backup.py  demo.py  kit.py  manpage.py  recover.py
ethernity/cli/core/: __init__.py  common.py  log.py  plan.py  types.py
ethernity/cli/flows/: __init__.py  backup.py  backup_flow.py  kit.py  prompts.py  recover.py  recover_flow.py
ethernity/cli/io/: __init__.py  frames.py  inputs.py  outputs.py
ethernity/cli/keys/: keys.py  recover_keys.py
ethernity/cli/ui/: __init__.py  debug.py  prompts.py  state.py  summary.py
ethernity/config/: __init__.py  a4.toml  installer.py  letter.toml  loader.py
ethernity/core/: models.py
ethernity/crypto/: __init__.py  age_cli.py  age_fetch.py  age_runtime.py  passphrases.py  sharding.py  signing.py
ethernity/encoding/: chunking.py  framing.py  qr_payloads.py
ethernity/formats/: __init__.py  compression.py  envelope_codec.py  envelope_types.py  frame_manifest.py
ethernity/kit/: recovery_kit.bundle.html
ethernity/qr/: codec.py  scan.py
ethernity/render/: __init__.py  draw.py  fallback.py  layout.py  pdf_render.py  service.py  templating.py
ethernity/templates/: kit_document.toml.j2  kit_document_letter.toml.j2  main_document.html.j2  main_document.toml.j2  main_document_letter.toml.j2  recovery_document.html.j2  recovery_document.toml.j2  recovery_document_letter.toml.j2  shard_document.toml.j2  shard_document_letter.toml.j2  signing_key_shard_document.toml.j2  signing_key_shard_document_letter.toml.j2
kit/: app.js  biome.json  build_kit.mjs  package-lock.json  package.json  recovery_kit.html
kit/app/: App.jsx  actions.js  actions_collect.js  actions_common.js  actions_export.js  actions_recover.js  auth.js  constants.js  envelope.js  format.js  frame_list.js  frames.js  frames_apply.js  frames_cipher.js  frames_parse.js  frames_protocol.js  handlers.js  index.jsx  io.js  shard_auth.js  shards.js  state.js  steps.jsx  ui.js
kit/app/components/: CollectorStep.jsx  DecryptSection.jsx  FrameCollector.jsx  Header.jsx  QrScannerPanel.jsx  RecoveredFiles.jsx  ShardCollector.jsx  StatusStrip.jsx  StepNav.jsx  StepShell.jsx  common.jsx
kit/app/hooks/: jsqr_runtime_core.js  useQrScannerRuntime.js  useQrScannerRuntime_jsqr.js
kit/app/state/: initial.js  reducer.js  selectors.js
kit/lib/: age_scrypt.js  blake2b.js  build_variants.mjs  cbor.js  crc32.js  encoding.js  loader_html.js  path_validation.js  qr_scan_normalize.js  shamir.js  zip.js
kit/lib/microact/: core.js  hooks.js  index.js  (+1 more)
kit/scripts/: run_extract_envelope.mjs  run_parse_vectors.mjs  run_tests.mjs
kit/tests/: actions_collect_async.test.mjs  build_variants.test.mjs  encoding_cbor_path_zip_state.test.mjs  frames_shards_shamir.test.mjs  io.test.mjs  loader_html.test.mjs  manifest_and_frame_validation.test.mjs  qr_scan_normalize.test.mjs  run_tests_script.test.mjs  scanner_runtime.test.mjs  stable_v1_hardening.test.mjs  test_helpers.mjs  v1_frozen_e2e.test.mjs
scripts/: build_nuitka.ps1  build_nuitka.sh  build_pyinstaller.ps1  build_pyinstaller.sh  check_wheel_contents.py  generate_homebrew_formula.py  generate_homebrew_source_formula.py  homebrew_ethernity.rb  homebrew_ethernity_core.rb  homebrew_ethernity_tap.rb  package_pyinstaller.py  update_homebrew_bottle_block.py
src/ethernity/: __init__.py  __main__.py  version.py
tests/: __init__.py  test_support.py
tests/e2e/: __init__.py  _frozen_profile_test.py  _mint_fixture_support.py  test_end_to_end_cli.py  test_end_to_end_sharding.py  test_end_to_end_v1_1_frozen.py  test_end_to_end_v1_1_frozen_raw.py  test_end_to_end_v1_baseline.py  test_end_to_end_v1_frozen.py  test_end_to_end_v1_frozen_raw.py
tests/fixtures/: recovery_parse_vectors.json
tests/integration/: __init__.py  test_integration_backup.py  test_integration_recover.py
tests/unit/: __init__.py  test_age_cli.py  test_age_fetch.py  test_app_paths.py  test_backup_args_validation.py  test_backup_flow_wizard_logic.py  test_backup_wizard.py  test_cbor.py  test_check_wheel_contents.py  test_chunking.py  test_cli_api.py  test_cli_app.py  test_cli_backup.py  test_cli_command_config.py  test_cli_command_kit.py  test_cli_command_mint.py  test_cli_command_recover.py  test_cli_command_render.py  test_cli_core_common.py  test_cli_core_text.py  test_cli_flow_kit.py  test_cli_flow_prompts.py  test_cli_flows.py  test_cli_recover_validation.py  test_cli_startup.py  test_cli_typer.py  test_cli_ui.py  test_cli_ui_debug.py  test_cli_ui_prompts.py  test_cli_ui_summary.py  test_compression.py  test_config.py  test_config_api.py  test_config_installer.py  test_config_paths.py  test_copy_catalog.py  test_document_inspector_tool.py  test_docx_render.py  test_envelope.py  test_fallback_blocks.py  (+50 more)
tooling/: document_inspector.py
tooling/document_inspector_app/: __init__.py  __main__.py  analysis.py  bootstrap.py  constants.py  formatting.py  gui.py  models.py  scan_sources.py  styles.py
(+393 files in other folders)
