[project]
name = "ethernity"
version = "0.1.0"
description = "Secure, offline-recoverable backup system with QR-based recovery documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbor2",
    "certifi",
    "mnemonic",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "shellingham>=1.5.4",
    "questionary>=2.0.0",
    "platformdirs>=4.2.0",
    "fpdf2",
    "jinja2",
    "pycryptodome",
    "pillow",
    "pypdf",
    "segno",
    "zxing-cpp",
    "playwright>=1.57.0",
    "pyrage",
]

[project.scripts]
ethernity = "ethernity.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.10.0"]
dev = [
    "coverage>=7.13.1",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ethernity", "ethernity.*"]

[tool.setuptools.package-data]
ethernity = ["templates/*.html.j2", "config/*.toml", "kit/*.html", "py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
