[project]
name = "ethernity-paper"
version = "0.9.1"
description = "Secure, offline-recoverable backup system with QR-based recovery documents"
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
keywords = ["backup", "recovery", "qr-code", "encryption", "offline", "paper-backup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving :: Backup",
    "Typing :: Typed",
]
dependencies = [
    "cbor2>=5.8.0",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "questionary>=2.1.1",
    "platformdirs>=4.9.2",
    "fpdf2>=2.8.6",
    "jinja2>=3.1.6",
    "pycryptodome>=3.23.0",
    "pillow>=12.1.1",
    "pypdf>=6.7.2",
    "segno>=1.6.6",
    "zxing-cpp>=3.0.0",
    "playwright>=1.58.0",
    "pyrage>=1.3.0",
    "python-docx>=1.2.0",
    "coverage>=7.13.4",
]

[project.scripts]
ethernity = "ethernity.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.19.0"]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ethernity", "ethernity.*"]

[tool.setuptools.package-data]
ethernity = [
    "templates/*/*.html.j2",
    "templates/_shared/*.html.j2",
    "templates/_shared/*.j2",
    "templates/_shared/partials/*.j2",
    "templates/_shared/assets/*.js",
    "templates/_shared/assets/*.ttf",
    "templates/*/style.json",
    "storage/*.html.j2",
    "storage/*.png",
    "config/*.toml",
    "kit/*.html",
    "crypto/bip39_wordlist.txt",
    "py.typed",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/ethernity"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "twine>=6.2.0",
]
